--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -16,6 +16,15 @@ server {
     location ~* \.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' '*' always;
+        add_header 'Access-Control-Expose-Headers' '*' always;
+        add_header 'Access-Control-Max-Age' '3600' always;
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
     }
 
     # API proxy to backend
@@ -50,6 +59,12 @@ server {
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS, PATCH, HEAD' always;
         add_header 'Access-Control-Allow-Headers' '*' always;
+        add_header 'Access-Control-Expose-Headers' '*' always;
+        add_header 'Access-Control-Max-Age' '3600' always;
+
+        if ($request_method = 'OPTIONS') {
+            return 204;
+        }
         
         try_files $uri $uri/ /index.html;
     }
@@ -59,3 +74,4 @@ server {
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-XSS-Protection "1; mode=block" always;
 }
+
